add proper cell counts to find-cell-type-count nb

--- a/find-cell-type-count/find-cell-type-count.ipynb
+++ b/find-cell-type-count/find-cell-type-count.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Start by creaeting an API client for the DSS:"
+    "Start by creating an API client for the DSS:"
    ]
   },
   {
@@ -1153,8 +1153,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now test this out on a single result:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1182,11 +1189,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortuantely, **the `esimated_cell_count` field is incorrect!**\n",
+    "Unfortunately, **the `esimated_cell_count` field is incorrect!** Each bundle has a cell count of 1.\n",
     "\n",
-    "To get an accurate count of the number of cells, we need to download the `*.results` file in each result, as that contains the gene expression matrix. This matrix will have one row per cell, so we can count the number of rows in this cell to determine the total number of cells in that search result.\n",
+    "To get an accurate count of the number of cells, we need to download the `*.genes.results` file in each result, as that contains the gene expression matrix. This matrix will have one row per cell, so we can count the number of rows in this cell to determine the total number of cells in that search result.\n",
     "\n",
     "We need to redefine the `extract_cell_counts()` method above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_ext = \".genes.results\"\n",
+    "\n",
+    "def has_matrix_file(bundle):\n",
+    "    for f in bundle['metadata']['manifest']['files']:\n",
+    "        if f['name'].endswith(matrix_ext):\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -1195,17 +1217,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tempfile\n",
+    "\n",
     "def extract_cell_counts(bundle):\n",
-    "    # First, go through the manifest and find the *.results file\n",
-    "    # get the metadata manifest files\n",
-    "    for f in bundle['metadata']['manifest']['files']:\n",
-    "        if f['name'].endswith(\".result\"):\n",
-    "            # Get the file UUID\n",
-    "            # Download the file with client.get_file()\n",
-    "            # Write the binary content to a temp file\n",
-    "            # Read the number of lines\n",
-    "            # return number of lines\n",
-    "            pass\n",
+    "    if has_matrix_file(bundle):\n",
+    "        count = 0\n",
+    "        for f in bundle['metadata']['manifest']['files']:\n",
+    "            if f['name'].endswith(matrix_ext):\n",
+    "                \n",
+    "                # Use get_file() to download the file\n",
+    "                uuid = f['uuid']\n",
+    "                version = f['version']\n",
+    "                my_file = client.get_file(\n",
+    "                    uuid = uuid,\n",
+    "                    version = version,\n",
+    "                    replica = \"aws\"\n",
+    "                )\n",
+    "                \n",
+    "                # Write matrix file in chunks (in case a file is large)\n",
+    "                blocksize = 1000000000\n",
+    "                with tempfile.TemporaryFile() as tempf:\n",
+    "                    for i in range(0, len(my_file), blocksize):\n",
+    "                        tempf.write(my_file[i:i+blocksize])\n",
+    "                    # Count number of lines (cells)\n",
+    "                    # (This is not exact! There are many corner cases.)\n",
+    "                    tempf.seek(0)\n",
+    "                    count += len(tempf.readlines()) - 1\n",
+    "                    \n",
+    "        return count\n",
     "    return 0"
    ]
   },
@@ -1213,31 +1252,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we try it again:"
+    "Now we try it again on the first 20 bundles in the query:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pancreas cell count: 0\n"
+      "pancreas cell count: 1,166,940\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
     "\n",
+    "n_bundles = 20\n",
+    "\n",
     "# Iterate through all search results containing the chosen cell type\n",
     "import itertools\n",
-    "for bundle in itertools.islice(client.post_search.iterate(es_query=query, replica='aws', output_format='raw'), 1):\n",
-    "    count += extract_cell_counts(bundle)\n",
+    "for b in itertools.islice(client.post_search.iterate(es_query=query, replica='aws', output_format='raw'), n_bundles):\n",
+    "    if has_matrix_file(b):\n",
+    "        count += extract_cell_counts(b)\n",
     "\n",
-    "print('{} cell count: {}'.format(organ_type, count))"
+    "print('{} cell count: {:,}'.format(organ_type, count))"
    ]
   }
  ],
