--- a/download-any-bam-file/download-any-bam-file.ipynb
+++ b/download-any-bam-file/download-any-bam-file.ipynb
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can iterate over all fastq files:"
+    "Now we can iterate over a few fastq files:"
    ]
   },
   {
