--- a/download-any-bam-file/download-any-bam-file.ipynb
+++ b/download-any-bam-file/download-any-bam-file.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we show how to search all bundles in the Human Cell Atlas Data Store (DSS) to find any bundle with a BAM file, and downloda it. This will allow us to see an example of aligned data in the HCA."
+    "In this notebook we show how to search all bundles in the Human Cell Atlas Data Store (DSS) to find any bundle with a BAM file, and download it. This will allow us to see an example of aligned data in the HCA."
    ]
   },
   {
