update readme and rename explore-hca-scanpy nb

--- a/explore-hca-dataset-scanpy/explore-hca-dataset-scanpy.ipynb
+++ b/explore-hca-dataset-scanpy/explore-hca-dataset-scanpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore an HCA data set in Scanpy (May 2019 version)\n",
+    "# Explore an HCA Data Set in Scanpy\n",
     "This notebook shows a few quick steps to start exploring an example HCA data sets using [scanpy](https://github.com/theislab/scanpy) ([citation](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-017-1382-0))."
    ]
   },
