update text of intro nb cell in install-hca

--- a/install-hca/install-hca.ipynb
+++ b/install-hca/install-hca.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the HCA CLI"
+    "# Install the HCA CLI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install the HCA CLI tool using `pip`:"
+    "The first step of programmatic access to the HCA is installation of the [dcp-cli](https://github.com/HumanCellAtlas/dcp-cli). Install the HCA CLI tool using `pip`:"
    ]
   },
   {
