--- a/explore-hca-dataset-scanpy/explore-hca-dataset-scanpy.ipynb
+++ b/explore-hca-dataset-scanpy/explore-hca-dataset-scanpy.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "## Read the expression matrix file downloaded from the HCA\n",
     "\n",
-    "The file lodaed here is from the study [Single-Cell Analysis of Human Pancreas Reveals Transcriptional Signatures of Aging and Somatic Mutation Patterns by Enge, et al.](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6047899/), available in this repository:"
+    "The file loaded here is from the study [Single-Cell Analysis of Human Pancreas Reveals Transcriptional Signatures of Aging and Somatic Mutation Patterns by Enge, et al.](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6047899/), available in this repository:"
    ]
   },
   {
@@ -580,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
